2004-06-24  Jeffrey Stedfast  <fejj@novell.com>

	* providers/local/camel-spool-folder.c (spool_lock): If we fail to
	lock the folder, close the lockfd and reset it to -1. Fixes bug
	#54680.

2004-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-store.c (imap4_get_folder_info):
	First LIST/LSUB the toplevel folder, and then LIST/LSUB the
	subfolders (it needs to be 2 commands to work properly).
	(imap4_delete_folder): CLOSE the folder we are about to DELETE if
	it is currently SELECTED.

	* providers/imap/camel-imap-provider.c (imap_url_equal): Same.

	* providers/imap4/camel-imap4-provider.c (imap4_url_equal): Check
	the protocol.

	* providers/imap4/camel-imap4-store.c (imap4_build_folder_info):
	Hide password, etc info in the fi->uri's.
	(imap4_create_folder): Don't bother to use
	imap4_get_folder_info(), we can construct the fi ourselves.
	(imap4_delete_folder): Emit the folder_deleted signal and
	construct an fi ourselves.
	(imap4_subscribe_folder): Same.
	(imap4_unsubscribe_folder): Same.

	* providers/imap4/camel-imap4-provider.c: Specify that the
	fragment is the path.

2004-06-21  Christian Kellner <gicmo@xatom.net>

	* camel-service.c (service_setv): Really set the path if tag is 
	CAMEL_SERVICE_PATH.

2004-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* camel-mime-filter-enriched.c (enriched_to_html): Fixed a number
	of issues described in bug #49497.

2004-06-18  Jeffrey Stedfast  <fejj@novell.com>

	* camel.c (camel_shutdown): Call camel_mime_utils_shutdown() and
	camel_operation_shutdown().

	* camel-operation.c (camel_operation_shutdown): New function.

	* camel-mime-utils.c (camel_mime_utils_shutdown): New function to
	clean up the compiled regexes.

	* camel-stream-buffer.c (set_vbuf): Need to re-init sbf->ptr and
	sbf->end too, or we'll be sorrryy!

2004-06-18  Not Zed  <NotZed@Ximian.com>

	* camel-exception.h (CAMEL_EXCEPTION_INITIALISER): setup for
	static inititialisation.
